--- a/scanner/templates/homepage.jinja2
+++ b/scanner/templates/homepage.jinja2
@@ -1,28 +1,48 @@
 {% extends '_layout.jinja2' %}
 
-{% block title %}Homepage{% endblock %}
 
 {% block content %}
-    <div class="py-5 text-center">
-        <img class="d-block mx-auto mb-4" src="https://github.com/ConsenSys/mythril/raw/master/static/mythril.png" alt="" width="72" height="72">
-        <p class="h2">Add your repo to <br>Mythril Scanner</p>
+  <style>
+    // SASS Variables.
+    canvas {
+      display: block;
+      vertical-align: bottom;
+    }
+
+    #particles-js {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: #271c2c
+    }
+
+    .text {
+      text-align: center;
+      position: absolute;
+      top: 50%;
+      right: 50%;
+      transform: translate(50%,-50%);
+      color: #fff;
+      max-width: 90%;
+      padding: 2em 3em;
+      background: rgba(0, 0, 0, 0.4);
+      text-shadow: 0px 0px 2px #131415;
+    }
+  </style>
+  <script>
+    window.onload = function() {
+      Particles.init({
+        selector: '#particles-js',
+        connectParticles: true,
+      });
+    };
+  </script>
+  <canvas id="particles-js"></canvas>
+  <div class="section text">
+    <div class="container">
+      <h3 class="section-heading">Heimdall</h3>
+      <p class="section-description">Ethereum Smart Contracts Security Monitoring</p>
+      <a class="button button-primary" href="http://getskeleton.com">Get badge</a>
     </div>
-    <div class="row">
-        <div class="col-4 offset-md-4">
-            <form>
-                <div class="form-group">
-                    <label>Github Repo url *</label>
-                    <input class="form-control" placeholder="https://github.com/maddevsio/neureal-token-test">
-                </div>
-                <div class="form-group">
-                    <label>Email (optional)</label>
-                    <input class="form-control" type="email">
-                </div>
-                <button class="btn btn-primary">Get my badge</button>
-            </form>
-            <div class="alert alert-info">
-                Email will be used to send notifications about new issues discovered within repository smart contracts
-            </div>
-        </div>
-    </div>
+  </div>
 {% endblock %}
