Update line colors

--- a/scanner/templates/_layout.jinja2
+++ b/scanner/templates/_layout.jinja2
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Heimdall - </title>
+  <title>Heimdall - Ethereum Smart Contracts Security Monitoring</title>
   <meta name="description" content="">
   <meta name="author" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
