--- a/scanner/templates/homepage.jinja2
+++ b/scanner/templates/homepage.jinja2
@@ -34,6 +34,7 @@
       Particles.init({
         selector: '#particles-js',
         connectParticles: true,
+        color: ['#DA0463', '#404B69', '#DBEDF3'],
       });
     };
   </script>
