--- a/scanner/templates/_layout.jinja2
+++ b/scanner/templates/_layout.jinja2
@@ -10,8 +10,53 @@
   <link href='//fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.3/particles.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 </head>
-<body>{% block content %}{% endblock %}</body>
+<body>
+  <style>
+    .text-right {
+      text-align: right;
+    }
+    #particles-js {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: #271c2c
+    }
+    hr {
+      border-top: 4px solid black;
+    }
+
+  </style>
+  <script>
+    window.onload = function() {
+      Particles.init({
+        selector: '#particles-js',
+        connectParticles: true,
+        maxParticles: 150,
+        color: ['#DA0463', '#404B69', '#DBEDF3'],
+        responsive: [{
+          breakpoint: 300,
+          options: {
+            color: '#00C9B1',
+            maxParticles: 60,
+            connectParticles: true
+          }
+        },
+        {
+          breakpoint: 1000,
+          options: {
+            color: ['#DA0463', '#404B69', '#DBEDF3'],
+            maxParticles: 100,
+            connectParticles: true
+          }
+        }]
+      });
+    };
+  </script>
+  <canvas id="particles-js"></canvas>
+  {% block content %}{% endblock %}
+</body>
 </html>
