--- a/scanner/templates/error.jinja2
+++ b/scanner/templates/error.jinja2
@@ -1,31 +1,50 @@
+{% extends '_layout.jinja2' %}
+
+
 {% block content %}
     <style>
-        .text-center {
-            text-align: center;
+        .hide {
+            display: none;
         }
-        canvas {
-            height: 100vh;
-            width: 100vw;
-            display: block;
-          }
-        .container {
-            background: rgba(255, 255, 255, 0.88);
-            overflow: overlay;
-            overflow-y: scroll;
-            height: -webkit-fill-available;
-            padding: 20px 10px;
-        }
-    </style>
-    <div class="container text-section">
-        <div class="row">
-            <div class="six columns">
-                <h2><a href="/">Heimdall Report</a></h2>
-            </div>
-            <div class="six columns">
-                <p class="text-right"><small>{{ message }}</small>
-            </div>
-        </div>
 
-        <hr>
+        canvas {
+            display: block;
+            vertical-align: bottom;
+        }
+
+        #particles-js {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: #271c2c
+        }
+
+        .text {
+            text-align: center;
+            position: absolute;
+            top: 50%;
+            right: 50%;
+            transform: translate(50%, -50%);
+            color: #fff;
+            max-width: 90%;
+            padding: 2em 3em;
+            background: rgba(0, 0, 0, 0.4);
+            text-shadow: 0px 0px 2px #131415;
+        }
+
+    </style>
+    <div class="section text">
+        <div class="step-1">
+            <h3 class="section-heading">Heimdall</h3>
+            <p class="section-description">We couldn`t find the page you`re looking for.</p>
+            <button class="button button-primary badge-generator">Home</button>
+        </div>
     </div>
+    <script>
+        $(document).ready(function () {
+            $("button").click(function () {
+                location.replace('/');
+            })
+        });
+    </script>
 {% endblock %}
