--- a/scanner/templates/report.jinja2
+++ b/scanner/templates/report.jinja2
@@ -7,11 +7,13 @@
         .text-center {
             text-align: center;
         }
-        canvas { 
-            height: 100vh; 
-            width: 100vw; 
+
+        canvas {
+            height: 100vh;
+            width: 100vw;
             display: block;
-          }
+        }
+
         .container {
             background: rgba(255, 255, 255, 0.88);
             overflow: overlay;
@@ -26,57 +28,65 @@
                 <h2><a href="/">Heimdall Report</a></h2>
             </div>
             <div class="six columns">
-                <p class="text-right"><small>powered by mythril</small>
+                <p class="text-right">
+                    <small>powered by mythril</small>
             </div>
         </div>
-        
-        <h4><a href="https://github.com/{{ owner }}/{{ repo }}" target="_blank"><i class="fab fa-github"></i> {{ owner }}/{{ repo }}</a></h4>
+
+        <h4><a href="https://github.com/{{ owner }}/{{ repo }}" target="_blank"><i
+                class="fab fa-github"></i> {{ owner }}/{{ repo }}</a></h4>
         <hr>
-        {% if mythril.report %}
-            {% for key, item in mythril.report.items() %}
-                <h3>{{ item.file }} {% if not item.data.issues %}<i class="fa fa-check"></i>{% endif %}</h3>
-                {% for issue in item.data.issues %}
-                    <div class="{% if issue.type == 'Warning' %}bg-warning{% endif %}">
-                        <div class="row">
-                            <div class="eight columns">
-                                <h5 class="card-title">Contract {{ issue.contract }} Issue: {{ issue.title }}</h4>
+        {% if message == None %}
+            {% if mythril.report %}
+                {% for key, item in mythril.report.items() %}
+                    <h3>{{ item.file }} {% if not item.data.issues %}<i class="fa fa-check"></i>{% endif %}</h3>
+                    {% for issue in item.data.issues %}
+                        <div class="{% if issue.type == 'Warning' %}bg-warning{% endif %}">
+                            <div class="row">
+                                <div class="eight columns">
+                                    <h5 class="card-title">Contract {{ issue.contract }} Issue: {{ issue.title }}</h4>
+                                </div>
+                                <div class="four columns">
+                                    <p class="text-right">{{ issue.type }}</p>
+                                </div>
                             </div>
-                            <div class="four columns">
-                                <p class="text-right">{{ issue.type }}</p>
-                            </div>
+                            <table class="u-full-width">
+                                <tr>
+                                    <td>Path</td>
+                                    <td>{{ item.file }}:{{ issue.lineno }}</td>
+                                </tr>
+                                <tr>
+                                    <td>Function</td>
+                                    <td>{{ issue.function }}</td>
+                                </tr>
+                                <tr>
+                                    <td>Address</td>
+                                    <td>{{ issue.address }}</td>
+                                </tr>
+                                <tr>
+                                    <td>Debug</td>
+                                    <td>{{ issue.debug }}</td>
+                                </tr>
+                                <tr>
+                                    <td>Description</td>
+                                    <td>{{ issue.description }}</td>
+                                </tr>
+                                <tr>
+                                    <td>Code</td>
+                                    <td>{{ issue.code }}</td>
+                                </tr>
+                            </table>
                         </div>
-                        <table class="u-full-width">
-                            <tr>
-                                <td>Path</td>
-                                <td>{{ item.file }}:{{ issue.lineno }}</td>
-                            </tr>
-                            <tr>
-                                <td>Function</td>
-                                <td>{{ issue.function }}</td>
-                            </tr>
-                            <tr>
-                                <td>Address</td>
-                                <td>{{ issue.address }}</td>
-                            </tr>
-                            <tr>
-                                <td>Debug</td>
-                                <td>{{ issue.debug }}</td>
-                            </tr>
-                            <tr>
-                                <td>Description</td>
-                                <td>{{ issue.description }}</td>
-                            </tr>
-                            <tr>
-                                <td>Code</td>
-                                <td>{{ issue.code }}</td>
-                            </tr>
-                        </table>
-                    </div>
-                    <hr>
+                        <hr>
+                    {% endfor %}
                 {% endfor %}
-            {% endfor %}
+            {% else %}
+                <h1 class="text-center"><i class="fas fa-spinner fa-pulse"></i> Processing report...</h1>
+            {% endif %}
         {% else %}
-            <h1 class="text-center"><i class="fas fa-spinner fa-pulse"></i> Processing report...</h1>
+            <h1 class="text-center">{{ message }}</h1>
         {% endif %}
+
+
     </div>
 {% endblock %}
