added validation for empty input field

--- a/scanner/templates/homepage.jinja2
+++ b/scanner/templates/homepage.jinja2
@@ -27,7 +27,7 @@
     text-shadow: 0px 0px 2px #131415;
     margin: auto;
   }
-  .badge-generator{
+  .badge-generator, .get-badge{
     margin: auto
   }
   .footer-copyright{
@@ -109,10 +109,15 @@
     });
     getBadge.on('click', function () {
       var path = repoPath.val();
+      if (path === ""){
+        alert("Please input repository ");
+      }
+      else{
       markdown.find('textarea').html(`[![Heimdall Scanner](https://heimdall.maddevs.io/badge/github/${path})](https://heimdall.maddevs.io/report/github/${path})`)
       markdown.show();
       $('.step-2').hide();
       $('.step-3').show();
+      }
     })
   });
 </script> {% endblock %}
