--- a/scanner/templates/homepage.jinja2
+++ b/scanner/templates/homepage.jinja2
@@ -75,6 +75,7 @@
       <h3 class="section-heading">Place this code to README.md</h3>
       <textarea style="width:450px"></textarea>
     </div>  
+      <button class="button button-primary redirect-to-home hide">Go home</button>
   </div>
   
   <script>
@@ -84,6 +85,7 @@
       var getBadge = $('.get-badge');
       var repoPath = $('.repo-path');
       var markdown = $('.markdown');
+      var goHome = $('.redirect-to-home');
       btn.on('click', function(e){
         form.show();
         btn.hide();
@@ -95,6 +97,10 @@
         markdown.show();
         $('.step-2').hide();
         $('.step-3').show();
+        goHome.show();
+      })
+      goHome.on('click', function(){
+        location.href='/';
       })
     });
   </script>
