--- a/scanner/templates/homepage.jinja2
+++ b/scanner/templates/homepage.jinja2
@@ -68,7 +68,7 @@
     });
   };
 </script>
-<div class="container">s
+<div class="container">
   <div class="section text">
     <div class="step-1">
       <h3 class="section-heading">Heimdall</h3>
