--- a/scanner/templates/homepage.jinja2
+++ b/scanner/templates/homepage.jinja2
@@ -1,4 +1,5 @@
-{% extends '_layout.jinja2' %} {% block content %}
+{% extends '_layout.jinja2' %} 
+{% block content %}
 <style>
   .hide {
     display: none;
@@ -120,4 +121,5 @@
       }
     })
   });
-</script> {% endblock %}
+</script> 
+{% endblock %}
