--- a/scanner/templates/report.jinja2
+++ b/scanner/templates/report.jinja2
@@ -1,92 +1,88 @@
-{% extends '_layout.jinja2' %}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Heimdall</title>
+    <link rel="stylesheet" href="https://rawcdn.githack.com/maddevsio/heimdall/dfd924e7773a67c3f3b70e2b1b99d05251017e1c/markup/css/reset.css">
+    <link rel="stylesheet" href="https://rawcdn.githack.com/maddevsio/heimdall/dfd924e7773a67c3f3b70e2b1b99d05251017e1c/markup/css/main.css">
+  </head>
+  <body>
+    <div class="page" id="app">
+      {% include 'header.jinja2' %}
+      <div class="page__main">
+        <div class="layout">
+          <section class="layout__section">
+            <div class="report">
+              <div class="report__wrapper wrapper">
+                <div class="report__top">
+                  <h1 class="report__title">Heimdall Report</h1>
+                  <div class="report__path">
+                    <a href="#" target="_blank" class="report__link-git"> {{ owner }}/{{ repo }}</a>
+                  </div>
+                </div>
+                <ul class="report__list">
+                  <li class="report__item">
+                  {% if not error %} 
+                    {% if mythril.report %}
+                      {% for key, item in mythril.report.items() %}
+                        <div class="report-item">
+                          <h2 class="report-item__title">{{ item.file }}</h2>
+                        {% for issue in item.data.issues %}
+                          <div class="report-item__section">
+                            <div class="report-item__head">
+                              <div class="report-item__description">Contract {{ issue.contract }} Issue: {{ issue.title }}</div>
 
-{% block title %}Mythril Report | {% endblock %}
-
-{% block content %}
-    <style>
-        .text-center {
-            text-align: center;
-        }
-
-        canvas {
-            height: 100vh;
-            width: 100vw;
-            display: block;
-        }
-
-        .container {
-            background: rgba(255, 255, 255, 0.88);
-            overflow: overlay;
-            overflow-y: scroll;
-            height: -webkit-fill-available;
-            padding: 20px 10px;
-        }
-    </style>
-    <div class="container text-section">
-        <div class="row">
-            <div class="six columns">
-                <h2><a href="/">Heimdall Report</a></h2>
-            </div>
-            <div class="six columns">
-                <p class="text-right">
-                    <small>powered by mythril</small>
-            </div>
-        </div>
-
-        <h4><a href="https://github.com/{{ owner }}/{{ repo }}" target="_blank"><i
-                class="fab fa-github"></i> {{ owner }}/{{ repo }}</a></h4>
-        <hr>
-        {% if not error %}
-            {% if mythril.report %}
-                {% for key, item in mythril.report.items() %}
-                    <h3>{{ item.file }} {% if not item.data.issues %}<i class="fa fa-check"></i>{% endif %}</h3>
-                    {% for issue in item.data.issues %}
-                        <div class="{% if issue.type == 'Warning' %}bg-warning{% endif %}">
-                            <div class="row">
-                                <div class="eight columns">
-                                    <h5 class="card-title">Contract {{ issue.contract }} Issue: {{ issue.title }}</h4>
-                                </div>
-                                <div class="four columns">
-                                    <p class="text-right">{{ issue.type }}</p>
-                                </div>
+                              <div class="report-item__badge report-item__badge_{% if issue.type == 'Warning' %}warning{% else %}information{% endif %}">{{ issue.type }}</div>
                             </div>
-                            <table class="u-full-width">
-                                <tr>
-                                    <td>Path</td>
-                                    <td>{{ item.file }}:{{ issue.lineno }}</td>
-                                </tr>
-                                <tr>
-                                    <td>Function</td>
-                                    <td>{{ issue.function }}</td>
-                                </tr>
-                                <tr>
-                                    <td>Address</td>
-                                    <td>{{ issue.address }}</td>
-                                </tr>
-                                <tr>
-                                    <td>Debug</td>
-                                    <td>{{ issue.debug }}</td>
-                                </tr>
-                                <tr>
-                                    <td>Description</td>
-                                    <td>{{ issue.description }}</td>
-                                </tr>
-                                <tr>
-                                    <td>Code</td>
-                                    <td>{{ issue.code }}</td>
-                                </tr>
-                            </table>
-                        </div>
-                        <hr>
-                    {% endfor %}
-                {% endfor %}
-            {% else %}
-                <h1 class="text-center"><i class="fas fa-spinner fa-pulse"></i> Processing report...</h1>
-            {% endif %}
-        {% else %}
-            <h1 class="text-center">{{ error }}</h1>
-        {% endif %}
-
-
+                            <div class="report-item__content report-item__content_information">
+                              <div class="report-item__row">
+                                <div class="report-item__label">Path</div>
+                                <div class="report-item__value">{{ item.file }}:{{ issue.lineno }}</div>
+                              </div>
+                              <div class="report-item__row">
+                                <div class="report-item__label">Function</div>
+                                <div class="report-item__value">{{ issue.function }}</div>
+                              </div>
+                              <div class="report-item__row">
+                                <div class="report-item__label">Address</div>
+                                <div class="report-item__value">{{ issue.address }}</div>
+                              </div>
+                              <div class="report-item__row">
+                                <div class="report-item__label">Debug</div>
+                                <div class="report-item__value">{{ issue.debug }}</div>
+                              </div>
+                              <div class="report-item__row">
+                                <div class="report-item__label">Description</div>
+                                <div class="report-item__value">{{ issue.description }}</div>
+                              </div>
+                              <div class="report-item__row">
+                                <div class="report-item__label">Code</div>
+                                <div class="report-item__value">{{ issue.code }}</div>
+                              </div>
+                            </div>
+                          </div>
+                        {% endfor %}
+                      </div>
+                      {% endfor %}
+                      {% else %}
+                      <div class="isa_warning">
+                          <i class="fa fa-warning"></i>
+                          Report is empty.
+                      </div>
+                    {% endif %} 
+                  {% endif %}
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </section>
+        </div>
+      </div>
+      {% include 'footer.jinja2' %}
     </div>
-{% endblock %}
+    <script src="https://rawcdn.githack.com/maddevsio/heimdall/dfd924e7773a67c3f3b70e2b1b99d05251017e1c/markup/vendor/clipboard/clipboard.min.js"></script>
+    <script src="https://rawcdn.githack.com/maddevsio/heimdall/dfd924e7773a67c3f3b70e2b1b99d05251017e1c/markup/js/main.js"></script>
+  </body>
+</html>
