MC-25 Changed title of home page

--- a/scanner/templates/homepage.jinja2
+++ b/scanner/templates/homepage.jinja2
@@ -17,7 +17,7 @@
             <div class="intro">
               <div class="intro__wrapper wrapper">
                 <h1 class="intro__text">
-                  Ethereum Smart Contracts Security Monitoring
+                  Security Analysis for Ethereum Smart Contract Projects on Github
                 </h1>
                 <div class="intro__form">
                   <div class="git-form js-git-form-1">
