--- a/scanner/templates/footer.jinja2
+++ b/scanner/templates/footer.jinja2
@@ -18,7 +18,7 @@
                 <div class="dev-card">
                   <div class="dev-card__title">All the magic happened <br> thanks to Mythril</div>
                   <div class="dev-card__icon">
-                    <img src="https://rawcdn.githack.com/maddevsio/heimdall/dfd924e7773a67c3f3b70e2b1b99d05251017e1c/markup/img/mythril-logo.svg" 
+                    <img src="https://gitcdn.link/repo/maddevsio/heimdall/master/markup/img/mythril.svg" 
                       alt="Mythril">
                   </div>
                   <div class="dev-card__link">
