MC-25 Added checking for report exists

--- a/scanner/templates/report.jinja2
+++ b/scanner/templates/report.jinja2
@@ -67,11 +67,12 @@
                       </div>
                       {% endfor %}
                       {% else %}
+                    {% endif %} 
+                    {% else %}
                       <div class="isa_warning">
                           <i class="fa fa-warning"></i>
                           Report is empty.
                       </div>
-                    {% endif %} 
                   {% endif %}
                   </li>
                 </ul>
