--- a/scanner/templates/footer.jinja2
+++ b/scanner/templates/footer.jinja2
@@ -18,8 +18,8 @@
                 <div class="dev-card">
                   <div class="dev-card__title">All the magic happened <br> thanks to Mythril</div>
                   <div class="dev-card__icon">
-                    <img src="https://rawcdn.githack.com/maddevsio/heimdall/dfd924e7773a67c3f3b70e2b1b99d05251017e1c/markup/img/mythril-logo.svg" 
-                      alt="Mythril">
+                    <img src="https://rawcdn.githack.com/maddevsio/heimdall/c52124a45c2e2b7a5a5dd6ff93c6946e59392d69/markup/img/mythril.svg" 
+                      alt="Mythril" class="mythril-logo">
                   </div>
                   <div class="dev-card__link">
                     <a href="https://mythril.ai/" target="_blank">https://mythril.ai/</a>
@@ -31,7 +31,7 @@
               <div class="footer__text">To express gratitude or to get consultation or assistance in the system implementation write to <a href="mailto:rock@maddevs.io">rock@maddevs.io</a></div>
               <div class="footer__social">
                 <ul class="social-main">
-                  <li class="social-main__item">
+                  <li class="social-main__item">  
                     <a href="https://github.com/maddevsio" target="_blank">
                       <img src="https://rawcdn.githack.com/maddevsio/heimdall/dfd924e7773a67c3f3b70e2b1b99d05251017e1c/markup/img/git.svg" 
                         alt="GitHub">
