Added condition to check issues exists

--- a/scanner/templates/report.jinja2
+++ b/scanner/templates/report.jinja2
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Heimdall</title>
     <link rel="stylesheet" href="https://rawcdn.githack.com/maddevsio/heimdall/dfd924e7773a67c3f3b70e2b1b99d05251017e1c/markup/css/reset.css">
-    <link rel="stylesheet" href="https://rawcdn.githack.com/maddevsio/heimdall/dfd924e7773a67c3f3b70e2b1b99d05251017e1c/markup/css/main.css">
+    <link rel="stylesheet" href="https://rawcdn.githack.com/maddevsio/heimdall/280852ce684e38a5ca6a3b7f1ea6f3e074b30747/markup/css/main.css">
   </head>
   <body>
     <div class="page" id="app">
@@ -27,8 +27,10 @@
                   {% if not error %} 
                     {% if mythril.report %}
                       {% for key, item in mythril.report.items() %}
+                      {% if item.data.issues %}
                         <div class="report-item">
                           <h2 class="report-item__title">{{ item.file }}</h2>
+                        {% endif %}
                         {% for issue in item.data.issues %}
                           <div class="report-item__section">
                             <div class="report-item__head">
